
This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.

--------------------------------------------------------------------------------
Version <nextversion> released on <releasedate>

New Hardware Support
 * Trapeze Wireless Controllers

Enchancements
 * Better French Translation
 * Improved validation when creating/importing multiple guest accounts.
 * Configuration files ownership validation on start-up and in `pfcmd checkup`

Bug Fixes
 * Dashboard not printing the SQL stats when MySQL is not local (#1289)
 * Doubled allow subnets in captive-portal-common (#1242)
 * Unreliable encoding behavior messes up with translations (#1287)

--------------------------------------------------------------------------------
Version 3.0.1 released on 2011-09-23

Enhancements
 * Process IDs are now logged in the logs for pfcmd and pfcmd_vlan
 * We now strip all non-digits in telephone numbers during SMS activation
 * Improved validation of violation triggers

Bug Fixes
 * MySQL pf user not having execute privileges (#1282)
 * Error when doing nodeaccounting view all (#1280)
 * Error when using installer.pl on CentOS 6 (#1274)
 * Cannot confirm the PIN when using SMS self-registration (#1277)

--------------------------------------------------------------------------------
Version 3.0.0 released on 2011-09-21

Compatibility notice
 * BACKUP YOUR /usr/local/pf/ BEFORE UPGRADING. Several path changed with this
   release and an rpm upgrade will REMOVE your templates and remediation pages.
   See UPGRADE for more information.
 * We removed the central concept of mode (arp, dhcp or vlan). Now PacketFence
   can operate in multiple modes simultaneously. This new concept is called
   enforcement and is specified per interface in pf.conf.
 * Removed support for Apache prior to version 2.2.0 (#828)